<resources>
    <string name="app_name">Rapid Mart</string>
    <string name="shoppers">Shoppers</string>
    <string name="your_list">Your list</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm">Confirmation Code</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_up">SignUp</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_confirm">Enter Confirmation Code from Email</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="zipcode">"Enter Zip code"</string>
    <string name="assistants">Shopping Assistants near you</string>
    <string name="Shops">Shops near you</string>
    <string name="location">Location</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="continuewihout">Continue without Signin</string>
    <string name="submit">Submit</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="permission_required">Location permission required</string>
</resources>